# WASM-Stuff

./: .gitignore  README.md
AssemblyScript/: README.md
AssemblyScript/colour_bars/: app.css  index.html  package-lock.json  package.json
AssemblyScript/colour_bars/assembly/: index.ts
Rust/: README.md
Rust/colour_bars/: Cargo.toml  app.css  build.bat  build.sh  index.html  index.js
Rust/colour_bars/src/: lib.rs
Rust/colour_bars/web/: app.css  index.html
Rust/intro/: Cargo.toml  build_release.sh
Rust/intro/src/: letter.rs  lib.rs  stars.rs
Rust/intro/web/: app.css  index.html
Rust/stars/: Cargo.toml  build_release.bat  build_release.sh
Rust/stars/src/: lib.rs
Rust/stars/web/: app.css  index.html  stars.js
colour_bars/: Cargo.toml  readme.md
