[package]
name = "stars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.83"
lazy_static = "1.4.0"
rand = "0.8.5"
getrandom = { version="0.2.8",  features = ["js"] }

[lib]
crate-type = ["cdylib"]

[profile.dev]
opt-level = "s"

[profile.release]
opt-level = "z"
lto = true
